# N-Body-Simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  info.txt
.github/workflows/: build.yml
src/: main.c  particle.c  particle.h  renderer.c  renderer.h  utils.c  utils.h
